--- a/website/index.html
+++ b/website/index.html
@@ -1,38 +1,86 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculatrice</title>
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="style.css" />
-        <script>
-            $(function(){
-                var socket;
-
-                if(window.WebSocket){
-                    var socket = new WebSocket("ws://localhost:12369");
-
-                    socket.onmessage = function(msg){
-                        alert(msg.data);
-                        console.log(msg);
-                    }
-                }
-
-                function sendMessage(msg){
-                    socket.send(msg);
-                }
-
-                $('#boutonEnvois').click(function(){
-                    sendMessage($('#entreeCalcul').val());
-                });
-            });
-        </script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/websocket.js"></script>
     </head>
     <body align="center">
-        <h1>Calcul</h1>
-        <div class="row-fluid">
-            <div class="calculette span6">
-                <input type="text" id="entreeCalcul">
-                <button id="boutonEnvois">Calculer</button>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4 calculette">
+                    <div class="zoneEntree">
+                        <input type="text" id="entreeCalcul">
+                    </div>
+                    <br/>
+                    <div class="boutons">
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">7</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">8</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">9</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">/</button>
+                            </div>
+                        </div>
+                        <br/>
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">4</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">5</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">6</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">*</button>
+                            </div>
+                        </div>
+                        <br/>
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">1</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">2</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">3</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">-</button>
+                            </div>
+                        </div>
+                        <br/>
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">0</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">.</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block" id="boutonEnvois">=</button>
+                            </div>
+                            <div class="col-lg-3">
+                                <button class="btn btn-block boutonAction">+</button>
+                            </div>
+                        </div>
+                        <br/>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
